2008-01-20  Rob Bradford  <rob@openedhand.com>

	* libanjuta/anjuta-utils.c: (anjuta_util_parse_args_from_string):
	Fix parsing with quotes in the command line. Kudos to Jorn Baayen for
	coming up with the solution. (Bug: #510390.)

2008-01-20  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/build-basic-autotools/executer.c:
	Fix #502508, use anjuta_launcher to keep program output

	* plugins/terminal/terminal.c:
	Remove unused child_initizlized member
	Start the shell on plugin activation

2008-01-20  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/debug-manager/sparse_buffer.c:
	Fix a crash when scrolling in the diassembly window

	* plugins/debug-manager/sparse_view.c:
	Small limit change using the same "unit" for both number

2008-01-19  Naba Kumar  <naba@gnome.org>

	* plugins/language-support-cpp-java/cpp-java-assist.c:
	(cpp_java_assist_get_scope_context),
	(cpp_java_assist_get_pre_word): Usef ianjuta_editer_get_text_iter()
	instead.

2008-01-19  Johannes Schmid <jhs@gnome.org>

	* plugins/sourceview/anjuta-editor-sourceview.glade:
	* plugins/valgrind/vgrule-editor.c: (vg_rule_editor_save):
	
	And even more strings...

2008-01-19  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/project-wizard/templates/cpp/src/main.cc:
	Fix #498734, typing error in c++ project template

2008-01-19  Johannes Schmid <jhs@gnome.org>

	* plugins/editor/text_editor.c: (text_editor_save_file):
	* plugins/macro/anjuta-macro.glade:
	* plugins/subversion/anjuta-subversion.glade:

	Fixed even more strings

2008-01-19  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/language-support-cpp-java/cpp-java-assist.c:
	Fix bug #488519, remove critical warning (completion_cache == NULL
	is valid)

2008-01-19  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/gdb/debugger.c:
	Enable logging of gdb communication with an environment variable

2008-01-19  Naba Kumar  <naba@gnome.org>

	* plugins/editor/text-editor-iterable.c: (iiter_next),