@@ -1,5 +1,5 @@
 [Anjuta Plugin]
-_Name=Project Import Wizard
+_Name=Project Import Assistent
 _Description=Import an existing autotools project to anjuta
 Location=anjuta-project-import:AnjutaProjectImportPlugin
 Icon=anjuta-project-import-plugin-48.png
